--- a/p2/code/Makefile
+++ b/p2/code/Makefile
@@ -1,25 +1,11 @@
 CC = gcc
-CFLAGS = -g -c
-AR = ar -rc
-RANLIB = ranlib
+CFLAGS = -g -std=c99 -Wvla -Wall # -pthread -fsanitize=address,undefined
 
-SCHED = RR
+all: thread-worker
 
-all: thread-worker.a
+thread-worker: thread-worker.c
+	gcc -o thread-worker thread-worker.c
 
-thread-worker.a: thread-worker.o
-	$(AR) libthread-worker.a thread-worker.o
-	$(RANLIB) libthread-worker.a
-
-thread-worker.o: thread-worker.h
-
-ifeq ($(SCHED), RR)
-	$(CC) -pthread $(CFLAGS) thread-worker.c
-else ifeq ($(SCHED), MLFQ)
-	$(CC) -pthread $(CFLAGS) -DMLFQ thread-worker.c
-else
-	echo "no such scheduling algorithm"
-endif
 
 clean:
-	rm -rf testfile *.o *.a
+	rm thread-worker *.o *.a
