--- a/p2/code/Makefile
+++ b/p2/code/Makefile
@@ -3,9 +3,7 @@ CFLAGS = -g -c
 AR = ar -rc
 RANLIB = ranlib
 
-SCHED = RR
-
-all: thread-worker.a
+all: clean thread-worker.a
 
 thread-worker.a: thread-worker.o
 	$(AR) libthread-worker.a thread-worker.o
@@ -13,8 +11,8 @@ thread-worker.a: thread-worker.o
 
 thread-worker.o: thread-worker.h
 
-ifeq ($(SCHED), RR)
-	$(CC) -pthread $(CFLAGS) thread-worker.c
+ifeq ($(SCHED), PSJF)
+	$(CC) -pthread $(CFLAGS) -DPSJF thread-worker.c
 else ifeq ($(SCHED), MLFQ)
 	$(CC) -pthread $(CFLAGS) -DMLFQ thread-worker.c
 else
