Uses defined SCHED to call right scheduler

--- a/p2/code/Makefile
+++ b/p2/code/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -g -c
 AR = ar -rc
 RANLIB = ranlib
 
-SCHED = PSJF
+#SCHED = PSJF default value for SCHED so we can just type make
 
 all: clean thread-worker.a
 
