Revert "changes back to original file"
This reverts commit c5204191c9d237f168f7da335ed1355eae37522e.

--- a/p2/code/Makefile
+++ b/p2/code/Makefile
@@ -3,6 +3,8 @@ CFLAGS = -g -c
 AR = ar -rc
 RANLIB = ranlib
 
+#SCHED = PSJF default value for SCHED so we can just type make
+
 all: clean thread-worker.a
 
 thread-worker.a: thread-worker.o
