Revert Makefile to project default

--- a/p3/code/benchmark/Makefile
+++ b/p3/code/benchmark/Makefile
@@ -2,8 +2,7 @@
 all : test
 test: ../my_vm.h
 	gcc test.c -L../ -lmy_vm -m32 -o test
-
-mtest: gcc multi_test.c -L../ -lmy_vm -m32 -o mtest -lpthread
+	gcc multi_test.c -L../ -lmy_vm -m32 -o mtest -lpthread
 
 clean:
 	rm -rf test mtest
