--- a/p3/code/benchmark/Makefile
+++ b/p3/code/benchmark/Makefile
@@ -1,7 +1,7 @@
 
 all : test
 test: ../my_vm.h
-	gcc test.c -L../ -lmy_vm -m32 -o test
+	gcc test.c -L../ -lmy_vm -m32 -o test -lpthread
 	gcc multi_test.c -L../ -lmy_vm -m32 -o mtest -lpthread
 
 clean:
